--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   },
   "devDependencies": {
     "@azure/static-web-apps-cli": "^1.1.7"
+  },
+  "dependencies": {
+    "node-cache": "^5.1.2"
   }
 }
